# GPUScheduler

./: .env  README.md  agent_design.md  alembic.ini  design.md  pyproject.toml
alembic/: env.py
alembic/versions/: c8f3859940b6_add_instance_id_and_ip_to_gpu_table.py
docs/: AGENT_DESIGN.md  DESIGN.md  WORKLOG.md
main.egg-info/: PKG-INFO  SOURCES.txt
scripts/: run_server.py  seed_database.py
src/agent/: __init__.py
src/backend/: main.py  worker.py
src/backend/alembic/versions/: 5fe6c071ae5c_initial_database_schema.py
src/backend/api/: __init__.py
src/backend/api/v1/: __init__.py  api.py
src/backend/api/v1/endpoints/: __init__.py  api_keys.py  base.py  gpus.py  organization.py  organizations.py  users.py
src/backend/core/: __init__.py  auth.py  config.py  database.py
src/backend/crud/: api_key.py  base.py  gpu.py  organization.py  user.py
src/backend/models/: __init__.py  api_key.py  gpu.py  organization.py  user.py
src/backend/schemas/: api_key.py  gpu.py  organization.py  user.py
tests/: conftest.py  test_api.py  test_user_api.py
